--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,21 +1,13 @@
-<<<<<<< HEAD
 #Loading and preprocessing the data
 set the working directory
 
 ####1. Load the data(i.e. read.csv()) 
-=======
-Reproducible Research: Peer Assessment 1
-Steeve Brechmann
-
-2015-02-13
->>>>>>> origin/master
 
 ```{r} 
 #Load the actiivty data
 activity_data <- read.csv("activity.csv", stringsAsFactors=FALSE) 
 ```
 
-<<<<<<< HEAD
 ####2. Process/transform the data (if necessary) into a format suitable for analysis
 ```{r}
 #Changing the date to date format
@@ -47,84 +39,7 @@ For this part of the assignment, you can ignore the missing values in the datase
 
 ####1. Make a histogram of the total number of steps taken each day
 
-``` {r}
-=======
-This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
-
-Data
-The data for this assignment can be downloaded from the course web site:
-
-Dataset: Activity monitoring data [52K]
-The variables included in this dataset are:
-
-steps: Number of steps taking in a 5-minute interval (missing values are coded as NA)
-
-date: The date on which the measurement data was taken in YYYY-MM-DD format
-
-interval: Identifier for the 5-minute interval in which measurement was taken
-
-The dataset is stored in a comma-separated-value (CSV) file and there are a total of 17,568 observations in this dataset.
-
-Assignment
-This assignment will be described in multiple parts. You will need to write a report that answers the questions detailed below. Ultimately, you will need to complete the entire assignment in a single R markdown document that can be processed by knitr and be transformed into an HTML file.
-
-Throughout your report make sure you always include the code that you used to generate the output you present. When writing code chunks in the R markdown document, always use echo = TRUE so that someone else will be able to read the code. This assignment will be evaluated via peer assessment so it is essential that your peer evaluators be able to review the code for your analysis.
-
-For the plotting aspects of this assignment, feel free to use any plotting system in R (i.e., base, lattice, ggplot2).
-
-Fork/clone the GitHub repository created for this assignment. You will submit this assignment by pushing your completed files into your forked repository on GitHub. The assignment submission will consist of the URL to your GitHub repository and the SHA-1 commit ID for your repository state.
-
-NOTE: The GitHub repository also contains the dataset for the assignment so you do not have to download the data separately.
-
-Loading and preprocessing the data
-We assume that the reader set the correct R working directory with the setwd() function.
-
-Load the data (i.e. read.csv())
-# Clear the workspace
-rm(list=ls())
-
-# Load the raw activity data
-activity_raw <- read.csv("activity.csv", stringsAsFactors=FALSE)
-Process/transform the data (if necessary) into a format suitable for analysis
-# Transform the date attribute to an actual date format
-activity_raw$date <- as.POSIXct(activity_raw$date, format="%Y-%m-%d")
-
-# Compute the weekdays from the date attribute
-activity_raw <- data.frame(date=activity_raw$date, 
-                           weekday=tolower(weekdays(activity_raw$date)), 
-                           steps=activity_raw$steps, 
-                           interval=activity_raw$interval)
-
-# Compute the day type (weekend or weekday)
-activity_raw <- cbind(activity_raw, 
-                      daytype=ifelse(activity_raw$weekday == "saturday" | 
-                                     activity_raw$weekday == "sunday", "weekend", 
-                                     "weekday"))
-
-# Create the final data.frame
-activity <- data.frame(date=activity_raw$date, 
-                       weekday=activity_raw$weekday, 
-                       daytype=activity_raw$daytype, 
-                       interval=activity_raw$interval,
-                       steps=activity_raw$steps)
-
-# Clear the workspace
-rm(activity_raw)
-We display the first few rows of the activity data frame:
-
-head(activity)
-##         date weekday daytype interval steps
-## 1 2012-10-01  monday weekday        0    NA
-## 2 2012-10-01  monday weekday        5    NA
-## 3 2012-10-01  monday weekday       10    NA
-## 4 2012-10-01  monday weekday       15    NA
-## 5 2012-10-01  monday weekday       20    NA
-## 6 2012-10-01  monday weekday       25    NA
-What is the mean total number of steps taken per day?
-For this part of the assignment, you can ignore the missing values in the dataset.
-
-Make a histogram of the total number of steps taken each day
->>>>>>> origin/master
+```{r}
 # Compute the total number of steps each day (NA values removed)
 sum_data <- aggregate(activity$steps, by=list(activity$date), FUN=sum, na.rm=TRUE)
 
@@ -143,9 +58,8 @@ hist(sum_data$total,
      main="Histogram of the total number of steps taken each day\n(NA removed)")
 ```
 
-#### 2.Calculate and report the mean and median total number of steps taken per day
+####2.Calculate and report the mean and median total number of steps taken per day
 
-<<<<<<< HEAD
 ```{r}
 mean_NA_removed<- mean(sum_data$total)
 median_NA_removed<- median(sum_data$total)
@@ -155,19 +69,6 @@ The mean and meadian number of steps taken per day are `r mean_NA_removed` and `
 
 # What is the average daily activity pattern?
 #### 1.Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
-=======
-Calculate and report the mean and median total number of steps taken per day
-The mean and median are computed like
-
-mean(sum_data$total)
-median(sum_data$total)
-These formulas gives a mean and median of 9354 and 10395 respectively.
-
-What is the average daily activity pattern?
-Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
-# Clear the workspace
-rm(sum_data)
->>>>>>> origin/master
 
 ```{r}
 # Compute the means of steps accross all days for each interval
@@ -255,7 +156,7 @@ hist(sum_data$total,
      main="Histogram of the total number of steps taken each day\n(NA replaced by mean value)")
 ```
 
-The mean and median are computed like
+The mean and median are computed below
 
 ```{r}
 mean_NA_replaced <- mean(sum_data$total)
